--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -20,11 +20,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img=plt.imread('testimage.png')\n"
+    "img=plt.imread('testimage.png')\n",
+    "\n",
+    "#Convert image to numpy array to perform functions\n",
+    "npimg=np.asarray(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.10196079, 0.627451  , 0.74509805],\n",
+       "        [0.11372549, 0.6666667 , 0.78431374],\n",
+       "        [0.1254902 , 0.7058824 , 0.81960785],\n",
+       "        ...,\n",
+       "        [0.09803922, 0.5882353 , 0.70980394],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ]],\n",
+       "\n",
+       "       [[0.09019608, 0.56078434, 0.68235296],\n",
+       "        [0.09803922, 0.5921569 , 0.7137255 ],\n",
+       "        [0.09803922, 0.5882353 , 0.70980394],\n",
+       "        ...,\n",
+       "        [0.09803922, 0.5882353 , 0.70980394],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ]],\n",
+       "\n",
+       "       [[0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        ...,\n",
+       "        [0.09803922, 0.5882353 , 0.70980394],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.08235294, 0.5372549 , 0.6627451 ],\n",
+       "        [0.0627451 , 0.44705883, 0.5803922 ],\n",
+       "        [0.0627451 , 0.4509804 , 0.5803922 ],\n",
+       "        ...,\n",
+       "        [0.11372549, 0.6509804 , 0.7647059 ],\n",
+       "        [0.10980392, 0.654902  , 0.77254903],\n",
+       "        [0.12156863, 0.69411767, 0.8117647 ]],\n",
+       "\n",
+       "       [[0.09019608, 0.57254905, 0.69411767],\n",
+       "        [0.07843138, 0.50980395, 0.6392157 ],\n",
+       "        [0.08235294, 0.5372549 , 0.6627451 ],\n",
+       "        ...,\n",
+       "        [0.10980392, 0.64705884, 0.7647059 ],\n",
+       "        [0.09019608, 0.56078434, 0.68235296],\n",
+       "        [0.09803922, 0.5882353 , 0.7058824 ]],\n",
+       "\n",
+       "       [[0.0627451 , 0.45882353, 0.5882353 ],\n",
+       "        [0.04313726, 0.37254903, 0.50980395],\n",
+       "        [0.05098039, 0.39607844, 0.53333336],\n",
+       "        ...,\n",
+       "        [0.11372549, 0.6509804 , 0.76862746],\n",
+       "        [0.11372549, 0.6666667 , 0.78431374],\n",
+       "        [0.1254902 , 0.70980394, 0.8235294 ]]],\n",
+       "      shape=(200, 200, 3), dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "npimg"
    ]
   },
   {
