fix: added subtitle to the Grayscale function section

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -123,7 +123,8 @@
    "id": "994d88fe-ba50-40bf-8ae6-5a3b76116d42",
    "metadata": {},
    "source": [
-    "## Grayscale "
+    "## Grayscale \n",
+    "### Transforming a Color Image into a Timeless Grayscale Version"
    ]
   },
   {
