fix: Edited tutorial subtitles to make them more user-friendly.Added maximum input image size in the tutorial.

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -47,6 +47,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a9e52be-7990-441a-bad7-387d68d9248d",
+   "metadata": {},
+   "source": [
+    "#### Image Size\n",
+    "The maximum input image size is 1028 × 1028 pixels.\n",
+    "\n",
+    "If the input image size exceeds this limit, a ValueError or a warning will be raised."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0ea8096f-5245-4107-a057-221c81a9a0e9",
@@ -63,12 +74,6 @@
     "\n",
     "images=[image_1,image_2,image_3,image_4, image_5]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17a16efa-9afb-40dd-910e-1fd2a0b284a4",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -123,7 +128,7 @@
    "id": "994d88fe-ba50-40bf-8ae6-5a3b76116d42",
    "metadata": {},
    "source": [
-    "## Grayscale \n",
+    "## Grayscale an image\n",
     "### Transforming a Color Image into a Timeless Grayscale Version"
    ]
   },
@@ -176,7 +181,7 @@
    "id": "85b4c65d",
    "metadata": {},
    "source": [
-    "## blur(image, stdev = 1.0)"
+    "## Blur an Image"
    ]
   },
   {
@@ -227,7 +232,7 @@
    "id": "9aa3191b-cc37-4593-b2ed-f72272e1c20e",
    "metadata": {},
    "source": [
-    "## flip(image, direction=0)"
+    "## Flip an Image"
    ]
   },
   {
@@ -314,7 +319,7 @@
    "id": "4075afd8-aa2f-47a1-b12d-d19c607e949a",
    "metadata": {},
    "source": [
-    "## scale(image, N)"
+    "## Scale an Image"
    ]
   },
   {
@@ -404,7 +409,7 @@
    "id": "a0798902-d0de-4b2b-8502-68f5b5f1282d",
    "metadata": {},
    "source": [
-    "## augment(images, operations)"
+    "## Augment One or More Images"
    ]
   },
   {
@@ -468,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
