--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -13,9 +13,9 @@
    "id": "604f4f39-2a16-4f40-aee6-27357525be58",
    "metadata": {},
    "source": [
-    "ImaGenie helps with image augmentation and modification, providing a variety of functions to manipulate images for machine learning, computer vision, or creative purposes. Whether you need to flip, scale, convert to grayscale, or blur images, ImaGenie is your one-stop solution for fast and efficient image manipulation.\n",
+    "`imagenie` helps with image augmentation and modification, providing a variety of functions to manipulate images for machine learning, computer vision, or creative purposes. Whether you need to flip, scale, convert to grayscale, or blur images, `imagenie` is your one-stop solution for fast and efficient image manipulation.\n",
     "\n",
-    "ImaGenie offers the following functionalities: flip, grayscale, scale, and blur. It also allows you to augment multiple images with a series of these operations.\n",
+    "`imagenie` offers the following functionalities: flip, grayscale, scale, and blur. It also allows you to augment multiple images with a series of these operations.\n",
     "\n",
     "Let’s familiarize you with this package through a series of pictures of Sir Capybara Genie’s life journey."
    ]
@@ -43,7 +43,7 @@
    "id": "4ed98a65-3640-4b20-ad39-1e3e9acdeaa0",
    "metadata": {},
    "source": [
-    "ImaGenie is designed to work with data in the form of numpy arrays. Let's import Sir Capybara's images using matplotlib and convert them into numpy arrays accordingly. "
+    "`imagenie` is designed to work with data in the form of numpy arrays. Let's import Sir Capybara's images using matplotlib and convert them into numpy arrays accordingly. "
    ]
   },
   {
@@ -128,8 +128,7 @@
    "id": "994d88fe-ba50-40bf-8ae6-5a3b76116d42",
    "metadata": {},
    "source": [
-    "## Grayscale an image\n",
-    "### Transforming a Color Image into a Timeless Grayscale Version"
+    "## Grayscale an image"
    ]
   },
   {
@@ -137,7 +136,7 @@
    "id": "814543c2-2bc8-420f-934d-b7cd35b7ca25",
    "metadata": {},
    "source": [
-    "The function `grayscale()` in the `ImaGeneie` package converts the image to grayscale, i.e., it removes all color and reduces it to varying shades of gray. \n",
+    "The function `grayscale()` in the `imagenie` package converts the image to grayscale, i.e., it removes all color and reduces it to varying shades of gray. \n",
     "\n",
     "This is ideal for machine learning models that focus on intensity information, simplifying computations and highlighting structural features of the image, particularly when color information is not important."
    ]
@@ -181,7 +180,7 @@
    "id": "85b4c65d",
    "metadata": {},
    "source": [
-    "## Blur an Image"
+    "## Blur an image"
    ]
   },
   {
@@ -189,7 +188,7 @@
    "id": "8c6247b7",
    "metadata": {},
    "source": [
-    "The function `blur` in the `ImaGenie` package adds a Gaussian Blur by adding noise to a 3-channel input image. It leverages the Gaussian distribution with a provided value of standard deviation, `stdev` which defaults at 1.0.\n",
+    "The function `blur` in the `imagenie` package adds a Gaussian Blur by adding noise to a 3-channel input image. It leverages the Gaussian distribution with a provided value of standard deviation, `stdev` which defaults at 1.0.\n",
     "\n",
     "In image augmentation, blurring is useful for simulating real-world imperfections, such as motion blur or out-of-focus elements, enhancing a model's ability to handle noisy or degraded inputs in practical scenarios."
    ]
@@ -232,7 +231,7 @@
    "id": "9aa3191b-cc37-4593-b2ed-f72272e1c20e",
    "metadata": {},
    "source": [
-    "## Flip an Image"
+    "## Flip an image"
    ]
   },
   {
@@ -240,7 +239,7 @@
    "id": "3cb47589-4713-46ac-93c5-bd3d57fbb2e9",
    "metadata": {},
    "source": [
-    "the `flip()` function in the `ImaGenie` packa flips the input image either horizontally or vertically. The `direction` `0` implies horizontal flipping and `1` implies vertical flipping. \n",
+    "the `flip()` function in the `imagenie` packa flips the input image either horizontally or vertically. The `direction` `0` implies horizontal flipping and `1` implies vertical flipping. \n",
     "\n",
     "This technique is crucial in image augmentation for introducing mirrored variations, thereby increasing dataset diversity and reducing overfitting in machine learning models."
    ]
@@ -250,7 +249,7 @@
    "id": "d2d49a1d-6294-4589-bf64-7e55202057c7",
    "metadata": {},
    "source": [
-    "### But then he studied data scinece and his life flipped upside down!"
+    "### But then he studied data science and his life flipped around!"
    ]
   },
   {
@@ -284,7 +283,7 @@
    "id": "84dfc883-ab0b-483c-a310-40c4b9b23b9e",
    "metadata": {},
    "source": [
-    "#### He alslo flipped horizontally"
+    "#### He also flipped horizontally"
    ]
   },
   {
@@ -319,7 +318,7 @@
    "id": "4075afd8-aa2f-47a1-b12d-d19c607e949a",
    "metadata": {},
    "source": [
-    "## Scale an Image"
+    "## Scale an image"
    ]
   },
   {
@@ -327,7 +326,7 @@
    "id": "495d3f0c-8de3-4688-86fb-7f0e111fb0e4",
    "metadata": {},
    "source": [
-    "The `scale()` function in the `ImaGenie` package resizes an image using a scaling factor, `N`. The scaling factor `N` is a positive float number, and defaults to 1.\n",
+    "The `scale()` function in the `imagenie` package resizes an image using a scaling factor, `N`. The scaling factor `N` is a positive float number, and defaults to 1.\n",
     "\n",
     "Scaling is a fundamental augmentation technique, allowing for variations in image size and resolution. It’s especially important for training models to recognize objects at different scales, improving performance across varying perspectives or distances."
    ]
@@ -409,7 +408,7 @@
    "id": "a0798902-d0de-4b2b-8502-68f5b5f1282d",
    "metadata": {},
    "source": [
-    "## Augment One or More Images"
+    "## Augment images "
    ]
   },
   {
@@ -417,7 +416,7 @@
    "id": "d75b71cf-cd5d-4c2c-b7c8-c973268d3cb4",
    "metadata": {},
    "source": [
-    "The `augment()` function in the `ImaGenie` package applies a sequence of user-defined augmentation operations to a batch of images. It only allows previously mentioned operations. \n",
+    "The `augment()` function in the `imagenie` package applies a sequence of user-defined augmentation operations to a batch of images. It only allows previously mentioned operations. \n",
     "\n",
     "This is a powerful tool for creating robust training datasets by generating diverse versions of input images. Augmentation improves a model's ability to generalize, making it resilient to variations in lighting, orientation, or scale during deployment."
    ]
